Made things responsive

--- a/indexpages/index.html
+++ b/indexpages/index.html
@@ -62,7 +62,7 @@
         <!-- <div class=" crdimg crdimg4">
             <img src="/pics/dark spirls.jpeg" height="100%" width="100%">
         </div> -->
-        <!-- <div class="crdtxt crdtext4"> -->
+        <div class="containerwrapper">
             <h2>Welcome</h2>
             <p>Greetings and welcome to my little corner of the design world! My name is Madeleine Leahy, and I'm a
                 budding graphic designer who's excited to bring my passion for creativity to the table. As a
