--- a/indexpages/index.html
+++ b/indexpages/index.html
@@ -50,7 +50,7 @@
 
     <!-- --hero-- -->
     <div class="hero">
-        <div class="hero-img"></div><!-- <img src="/pics/hero.jpg"> -->
+        <div class="hero-img"><img src="../assets/pics/homepage/hero.jpg" width="100%"></div><!-- <img src="/pics/hero.jpg"> -->
         <p class="hero-text"> "As you speak, so will be th tone of your conversation; as you write, so will be the
             standards of your habits of thought, and as you read so will be the atmosphere of your life and the
             preparations of your judgment for those critical moments of choice".</p>
