--- a/indexpages/index.html
+++ b/indexpages/index.html
@@ -88,7 +88,7 @@
 
             <div class="crd3 crd">
                 <div class=" crdimg crdimg3">
-                    <img src="../assets/pics/homepage/graphics.jpeg" height="100%">
+                    <img src="../assets/pics/homepage/graphics.jpeg" width="100%" height="100%">
                 </div>
                 <div class="crdtxt crdtxt3">
                     <h2>Adobe Illustrator</h2>
@@ -97,7 +97,7 @@
             </div>
             <div class="crd3 crd">
                 <div class=" crdimg crdimg3">
-                    <img src="../assets/pics/homepage/photoshop.png" height="100%">
+                    <img src="../assets/pics/homepage/photoshop.png" width="100%" height="100%">
                 </div>
                 <div class="crdtxt crdtxt3">
                     <h2>Adobe Photoshop</h2>
@@ -106,7 +106,7 @@
             </div>
             <div class="crd3 crd">
                 <div class=" crdimg crdimg3">
-                    <img src="../assets/pics/homepage/web.jpeg" height="100%">
+                    <img src="../assets/pics/homepage/web.jpeg" width="110%">
                 </div>
                 <div class="crdtxt crdtxt3">
                     <h2>Visual Studio Code</h2>
@@ -123,7 +123,7 @@
     <div class="crd">
         <div class="crd4">
             <div class="crdimg crdimg4">
-                <img src="../assets/pics/homepage/drawinghobby.png" height="100%" width="110%">
+                <img src="../assets/pics/homepage/drawinghobby.png" height="100%" width="100%">
             </div>
             <div class="crdtxt">
                 <h2>Hobbies</h2>
