Figured out the colors. to be continued

--- a/indexpages/index.html
+++ b/indexpages/index.html
@@ -13,9 +13,9 @@
 <body>
     <!-- --banner-- -->
 
-    <div class="alertbanner">
+    <!-- <div class="alertbanner">
         <p>Will be earning my certificate in graphic design and web development soon!</p>
-    </div>
+    </div> -->
 
 
     <!-- --navigation-- -->
