--- a/indexpages/index.html
+++ b/indexpages/index.html
@@ -50,7 +50,7 @@
 
     <!-- --hero-- -->
     <div class="hero">
-        <div class="hero-img"></div><!-- <img src="/pics/hero.jpg"> -->
+        <div class="hero-img"><img src="../assets/pics/homepage/hero.jpg" width="100%"></div><!-- <img src="/pics/hero.jpg"> -->
         <p class="hero-text"> "As you speak, so will be th tone of your conversation; as you write, so will be the
             standards of your habits of thought, and as you read so will be the atmosphere of your life and the
             preparations of your judgment for those critical moments of choice".</p>
@@ -62,9 +62,9 @@
         <!-- <div class=" crdimg crdimg4">
             <img src="/pics/dark spirls.jpeg" height="100%" width="100%">
         </div> -->
-        <!-- <div class="crdtxt crdtext4"> -->
+        <div class="containerwrapper">
             <h2>Welcome</h2>
-            <p>Greetings and welcome to my little corner of the design world! My name is Madeleine Leahy, and I'm a
+            <p >Greetings and welcome to my little corner of the design world! My name is Madeleine Leahy, and I'm a
                 budding graphic designer who's excited to bring my passion for creativity to the table. As a
                 beginner,
                 I'm eager to dive into new challenges and push myself to create work that stands out and makes an
