Finished coloring page

--- a/indexpages/coloringpages/colringpages.html
+++ b/indexpages/coloringpages/colringpages.html
@@ -39,53 +39,53 @@
 
     <!-- --hero-- -->
     <div class="hero">
-        <div class="hero-img"></div><!-- <img src="/pics/hero.jpg"> -->
-        <p class="hero-text"> "As you speak, so will be th tone of your conversation; as you write, so will be the
+        <div class="hero-img"><img src="../../assets/pics/butterflies.jpeg" width="100%"></div><!-- <img src="/pics/hero.jpg"> -->
+        <p class="hero-text"> "As you speak, so will be the tone of your conversation; as you write, so will be the
             standards of your habits of thought, and as you read so will be the atmosphere of your life and the
             preparations of your judgment for those critical moments of choice".</p>
         <!-- --gallery-- -->
         <div class="gallery">
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/If I lose myself.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/red and teal Irish.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/Shakspeare mermaids.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/tea time.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/music and heart.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/pink teapots.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/red hair.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/butterflies.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/thou weed.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/yellow and blue teapot.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/pink creme.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/wild tea.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/peach and green.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../../assets/pics/beachreading.jpeg" height="100%">
+                <img src="../../assets/pics/coloringpages/lemonade.jpg" height="100%">
             </div>
             
         </div>
