--- a/indexpages/index.html
+++ b/indexpages/index.html
@@ -49,7 +49,7 @@
     <!-- --hero-- -->
     <div class="hero">
         <div class="hero-img"><img src="../assets/pics/homepage/hero.jpg" width="100%"></div><!-- <img src="/pics/hero.jpg"> -->
-        <p class="hero-text"> "As you speak, so will be th tone of your conversation; as you write, so will be the
+        <p class="hero-text"> "As you speak, so will be the tone of your conversation; as you write, so will be the
             standards of your habits of thought, and as you read so will be the atmosphere of your life and the
             preparations of your judgment for those critical moments of choice".</p>
 
@@ -118,18 +118,7 @@
     <!-- --hobbies-- -->
 
 
-    <div class="crd">
-        <div class="crd4">
-            <div class="crdimg crdimg4">
-                <img src="../assets/pics/homepage/drawinghobby.png" height="100%" width="100%">
-            </div>
-            <div class="crdtxt">
-                <h2>Hobbies</h2>
-                <p>My interests outside of work include a love for art and music, which are both outlets for my
-                    creativity. I also enjoy reading and hiking in my free time. Thank you for stopping by!</p>
-            </div>
-        </div>
-    </div>
+    
 
     <!-- --artworks-- -->
     <div class="skillsset">
