--- a/indexpages/index.html
+++ b/indexpages/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leahy Graphics</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script&display=swap" rel="stylesheet">
+
 
 </head>
 
@@ -48,37 +52,44 @@
 
     <!-- --hero-- -->
     <div class="hero">
-        <div class="hero-img"><img src="../assets/pics/homepage/hero.jpg" width="100%"></div><!-- <img src="/pics/hero.jpg"> -->
+        <div class="hero-img"><img src="../assets/pics/homepage/hero.jpg" width="100%"></div>
+        <!-- <img src="/pics/hero.jpg"> -->
         <p class="hero-text"> "As you speak, so will be the tone of your conversation; as you write, so will be the
             standards of your habits of thought, and as you read so will be the atmosphere of your life and the
             preparations of your judgment for those critical moments of choice".</p>
+    </div>
 
+    <div class="containerwrapper">
 
-        <!-- --about me-- -->
-        <!-- <div class="crd4">
-        <div class="crd"> -->
-        <!-- <div class=" crdimg crdimg4">
-            <img src="/pics/dark spirls.jpeg" height="100%" width="100%">
-        </div> -->
-        <div class="containerwrapper">
-            <h2>Welcome</h2>
-            <p>Greetings and welcome to my little corner of the design world! My name is Madeleine Leahy, and I'm a
-                budding graphic designer who's excited to bring my passion for creativity to the table. As a
-                beginner,
-                I'm eager to dive into new challenges and push myself to create work that stands out and makes an
-                impact. To me, design is not just about making things look pretty; it's about communicating a
-                message
-                and connecting with people on a deeper level. Whether I'm designing a logo, crafting a brochure, or
-                working on a web project, I approach each task with enthusiasm and a commitment to excellence. When
-                I'm
-                not designing, you'll find me coloring and drawing, hanging out with friends, or reading new books.
-                I'm
-                thrilled to be embarking on this journey and can't wait to see where it takes me. Let's collaborate
-                and
-                create something special together!</p>
+        <h2>Welcome</h2>
+        <p>Welcome to my little corner of the design world! My name is Madeleine Leahy, and I'm a new to graphic design
+            and am excited to bring my passion for creativity to the table. As a
+            beginner,
+            I'm eager to dive into new challenges and push myself to create work that stands out and makes an
+            impact. To me, design is not just about making things look pretty; it's about communicating a
+            message
+            and connecting with people on a deeper level. Whether I'm designing a logo, crafting a brochure, or
+            working on a web project, I approach each task with enthusiasm and a commitment to excellence. When
+            I'm
+            not designing, you'll find me coloring and drawing, hanging out with friends, or reading new books.
+            I'm
+            thrilled to be embarking on this journey and can't wait to see where it takes me. Let's collaborate
+            and
+            create something special together!</p>
+    </div>
+    </div>
+    <!-- --Learn About Me-- -->
+    <div class="containerwrapper wrapperrow">
+        <img src="../assets/pics/abou me.jpg" width="50%">
+        <div class="wrapperrow wrapppertxt">
+            <h3>Learn more About Me!</h3>
+            <p>What are my hobbies? What can I do besides design? What </p>
+        </div>
+        <div>
+
         </div>
     </div>
-    </div>
+
     <!-- --skills-- -->
     <div class="skillsset">
         <h2 style="color: white;">Skills</h2>
@@ -89,7 +100,7 @@
                     <img src="../assets/pics/homepage/graphics.jpeg" width="100%" height="100%">
                 </div>
                 <div class="crdtxt crdtxt3">
-                    <h2>Adobe Illustrator</h2>
+                    <h3>Adobe Illustrator</h3>
                     <p>Creating graphics that are fun and imaginative!</p>
                 </div>
             </div>
@@ -98,7 +109,7 @@
                     <img src="../assets/pics/homepage/photoshop.png" width="100%" height="100%">
                 </div>
                 <div class="crdtxt crdtxt3">
-                    <h2>Adobe Photoshop</h2>
+                    <h3>Adobe Photoshop</h3>
                     <p>Editing and photobashing pictures to create a new visual!</p>
                 </div>
             </div>
@@ -107,7 +118,7 @@
                     <img src="../assets/pics/homepage/web.jpeg" width="110%">
                 </div>
                 <div class="crdtxt crdtxt3">
-                    <h2>Visual Studio Code</h2>
+                    <h3>Visual Studio Code</h3>
                     <p>Creating interactive websites with HTML, CSS, SCSS, and JAVASCRIPT!</p>
                 </div>
             </div>
@@ -118,7 +129,7 @@
     <!-- --hobbies-- -->
 
 
-    
+
 
     <!-- --artworks-- -->
     <div class="skillsset">
@@ -132,19 +143,20 @@
                         height="100%" width="100%">
                 </div>
                 <div class="crdtxt">
-                    <h2>Graphics</h2>
+                    <h3>Graphics</h3>
                     <!-- <p>text about img</p> -->
                     <a href="../websitehomepgs/graphics.html"><button class="btndefault">Check it out!</button></a>
                 </div>
             </div>
             <div class="crd2 crd">
                 <div class=" crdimg crdimg2">
-                    <img src="../assets/pics/coloringpages/red and teal Irish.jpg" height="110%" width="100%">
+                    <img src="../assets/pics/coloringpages/red and teal Irish.jpg" height="110%" width="110%">
                 </div>
                 <div class="crdtxt">
-                    <h2>Coloring Artwork</h2>
+                    <h3>Coloring</h3>
                     <!-- <p>text about img</p> -->
-                    <a href="../indexpages/coloringpages/colringpages.html"><button class="btndefault">See them now!</button></a>
+                    <a href="../indexpages/coloringpages/colringpages.html"><button class="btndefault">See them
+                            now!</button></a>
 
                 </div>
             </div>
@@ -153,7 +165,7 @@
                     <img src="../assets/pics/homepage/sketch.jpg" height=120% width="100%">
                 </div>
                 <div class="crdtxt">
-                    <h2>Sketches</h2>
+                    <h3>Sketches</h3>
                     <!-- <p>text about img</p> -->
                     <a href="../websitehomepgs/graphics.html"><button class="btndefault">Find more!</button></a>
                 </div>
