Something is wrong

--- a/indexpages/index.html
+++ b/indexpages/index.html
@@ -79,9 +79,9 @@
     </div>
     </div>
     <!-- --Learn About Me-- -->
-    <div class="containerwrapper wrapperrow">
-        <img src="../assets/pics/abou me.jpg" width="50%">
-        <div class="wrapperrow wrapppertxt">
+    <div class="wrappercontainer wrapperrow">
+        <img class="about_me_pic" src="../assets/pics/abou me.jpg">
+        <div class="wrappertxt">
             <h3>Learn more About Me!</h3>
             <p>What are my hobbies? What can I do besides design? What </p>
         </div>
