--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leahy Graphics</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../public/css/style.css">
 
 
 </head>
@@ -24,8 +24,7 @@
 
     <!-- --navigation-- -->
     <nav class="navbar">
-        <a href="../websitehomepgs/index.html" class="logo"><img src="../assets/pics/homepage/logo.png"
-                height="100px"></a>
+        <a href="../websitehomepgs/index.html" class="logo"><img src="../public/pics/homepage/logo.png"       height="100px"></a>
         <ul class="nav-links">
             <input type="checkbox" id="checkbox_toggle" />
             <label for="checkbox_toggle" class="hamburger">&#9776</label>
@@ -52,7 +51,7 @@
 
     <!-- --hero-- -->
     <div class="hero">
-        <div class="hero-img"><img src="../assets/pics/homepage/hero.jpg" width="100%"></div>
+        <div class="hero-img"><img src="../public/pics/homepage/hero.jpg" width="100%"></div>
         <!-- <img src="/pics/hero.jpg"> -->
         <p class="hero-text"> "As you speak, so will be the tone of your conversation; as you write, so will be the
             standards of your habits of thought, and as you read so will be the atmosphere of your life and the
@@ -88,7 +87,7 @@
 
             <div class="crd3 crd">
                 <div class=" crdimg crdimg3">
-                    <img src="../assets/pics/homepage/graphics.jpeg" width="100%" height="100%">
+                    <img src="../public/pics/homepage/graphics.jpeg" width="100%" height="100%">
                 </div>
                 <div class="crdtxt crdtxt3">
                     <h3>Adobe Illustrator</h3>
@@ -97,7 +96,7 @@
             </div>
             <div class="crd3 crd">
                 <div class=" crdimg crdimg3">
-                    <img src="../assets/pics/homepage/photoshop.png" width="100%" height="100%">
+                    <img src="../public/pics/homepage/photoshop.png" width="100%" height="100%">
                 </div>
                 <div class="crdtxt crdtxt3">
                     <h3>Adobe Photoshop</h3>
@@ -106,7 +105,7 @@
             </div>
             <div class="crd3 crd">
                 <div class=" crdimg crdimg3">
-                    <img src="../assets/pics/homepage/web.jpeg" width="110%">
+                    <img src="../public/pics/homepage/web.jpeg" width="110%">
                 </div>
                 <div class="crdtxt crdtxt3">
                     <h3>Visual Studio Code</h3>
@@ -130,7 +129,7 @@
             <div class="crd2 crd">
 
                 <div class=" crdimg crdimg2">
-                    <img src="../assets/pics/GDES_120_SPRING2023_HOLIDAYCARDS_national_doughnut_day_MADELEINE_LEAHY.png"
+                    <img src="../public/pics/GDES_120_SPRING2023_HOLIDAYCARDS_national_doughnut_day_MADELEINE_LEAHY.png"
                         height="100%" width="100%">
                 </div>
                 <div class="crdtxt">
@@ -141,7 +140,7 @@
             </div>
             <div class="crd2 crd">
                 <div class=" crdimg crdimg2">
-                    <img src="../assets/pics/coloringpages/red and teal Irish.jpg" height="110%" width="110%">
+                    <img src="../public/pics/coloringpages/red hair.jpg" height="110%" width="110%">
                 </div>
                 <div class="crdtxt">
                     <h3>Coloring</h3>
@@ -153,7 +152,7 @@
             </div>
             <div class="crd2 crd">
                 <div class=" crdimg crdimg2">
-                    <img src="../assets/pics/homepage/sketch.jpg" height=120% width="100%">
+                    <img src="../public/pics/homepage/sketch.jpg" height=120% width="100%">
                 </div>
                 <div class="crdtxt">
                     <h3>Sketches</h3>
@@ -173,12 +172,12 @@
     <!-- --footer-- -->
     <div class="footerdev">
         <div class="footericons">
-            <a hrefclass="ficon"><img src="../../../assets/pics/homepage/linked_in.png" height="50px"></a>
-            <a class="ficon"><img src="../../../assets/pics/homepage/logo_instagram.png" height="50px"></a>
-            <a class="ficon"><img src="../../../assets/pics/homepage/pinterest_favicon.png" height="50px"></a>
+            <a hrefclass="ficon"><img src="../public/pics/homepage/linked_in.png" height="50px"></a>
+            <a class="ficon"><img src="../public/pics/homepage/logo_instagram.png" height="50px"></a>
+            <a class="ficon"><img src="../public/pics/homepage/pinterest_favicon.png" height="50px"></a>
         </div>
         <div class="footerdev2">
-            <img src="../../../assets/pics/homepage/logo.png" height="50px">
+            <img src="../public/pics/homepage/logo.png" height="50px">
             <p>&copy Copyright. All Right's Reserved 2023</p>
         </div>
     </div>
