relinked coloring page

--- a/public/coloringpages/colringpages.html
+++ b/public/coloringpages/colringpages.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <!-- --nav-- -->
     <nav class="navbar">
-        <a href="../index.html" class="logo"><img src="../../assets/pics/homepage/logo.png"
+        <a href="../index.html" class="logo"><img src="../pics/homepage/logo.png"
                 height="100px"></a>
         <ul class="nav-links">
             <input type="checkbox" id="checkbox_toggle" />
@@ -39,50 +39,50 @@
 
     <!-- --hero-- -->
     <div class="hero">
-        <div class="hero-img"><img src="../../assets/pics/butterflies.jpeg" width="100%"></div><!-- <img src="/pics/hero.jpg"> -->
+        <div class="hero-img"><img src="../pics/butterflies.jpeg" width="100%"></div><!-- <img src="/pics/hero.jpg"> -->
         <p class="hero-text"> "As you speak, so will be the tone of your conversation; as you write, so will be the
             standards of your habits of thought, and as you read so will be the atmosphere of your life and the
             preparations of your judgment for those critical moments of choice".</p>
         <!-- --gallery-- -->
         <div class="gallery">
             <div class="gallery img">
-                <img src="../../assets/pics/coloringpages/If I lose myself.jpg" height="100%">
+                <img src="../pics/coloringpages/butterflies.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../assets/pics/coloringpages/red and teal Irish.jpg" height="100%">
+                <img src="../pics/coloringpages/If I lose myself.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../assets/pics/coloringpages/Shakspeare mermaids.jpg" height="100%">
+                <img src="../pics/coloringpages/lemonade.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../assets/pics/coloringpages/tea time.jpg" height="100%">
+                <img src="../pics/coloringpages/music and heart.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../assets/pics/coloringpages/music and heart.jpg" height="100%">
+                <img src="../pics/coloringpages/peach and green.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../assets/pics/coloringpages/pink teapots.jpg" height="100%">
+                <img src="../pics/coloringpages/pink creme.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../assets/pics/coloringpages/red hair.jpg" height="100%">
+                <img src="../pics/coloringpages/pink teapots.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../assets/pics/coloringpages/butterflies.jpg" height="100%">
+                <img src="../pics/coloringpages/red and teal Irish.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../assets/pics/coloringpages/thou weed.jpg" height="100%">
+                <img src="../pics/coloringpages/Shakspeare mermaids.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../assets/pics/coloringpages/yellow and blue teapot.jpg" height="100%">
+                <img src="../pics/coloringpages/tea time.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../assets/pics/coloringpages/pink creme.jpg" height="100%">
+                <img src="../pics/coloringpages/thou weed.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../assets/pics/coloringpages/wild tea.jpg" height="100%">
+                <img src="../pics/coloringpages/wild tea.jpg" height="100%">
             </div>
             <div class="gallery img">
-                <img src="../../assets/pics/coloringpages/peach and green.jpg" height="100%">
+                <img src="../pics/coloringpages/yellow and blue teapot.jpg" height="100%">
             </div>
             <div class="gallery img">
                 <img src="../../assets/pics/coloringpages/lemonade.jpg" height="100%">
