--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
 
     <!-- --skills-- -->
     <div class="skillsset">
-        <h2 style="color: white;">Skills</h2>
+        <h2 style="color: rgb(0, 0, 0);">Skills</h2>
         <div class="skillcards">
 
             <div class="crd3 crd">
@@ -123,7 +123,7 @@
 
     <!-- --artworks-- -->
     <div class="skillsset">
-        <h2 style="color: white;">Artwork</h2>
+        <h2 style="color: rgb(0, 0, 0);">Artwork</h2>
         <div class="skillcards">
 
             <div class="crd2 crd">
