started graphics page

--- a/public/graphic page/graphics.html
+++ b/public/graphic page/graphics.html
@@ -6,17 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../assets/css/style.css">
-    <link rel="stylesheet" href="../../components/button/button.css">
-    <link rel="stylesheet" href="../../components/nav/nav4.css">
-    <link rel="stylesheet" href="../../assets/css/style.css">
-    <link rel="stylesheet" href="../../components/button/button.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <!-- --nav-- -->
     <nav class="navbar">
-        <a href="../index.html" class="logo"><img src="../../pics/homepage/logo.png" height="100px"></a>
+        <a href="../index.html" class="logo"><img src="../pics/homepage/logo.png" height="100px"></a>
         <ul class="nav-links">
             <input type="checkbox" id="checkbox_toggle" />
             <label for="checkbox_toggle" class="hamburger">&#9776</label>
@@ -44,7 +40,7 @@
     <!-- --hero-- -->
     <div class="graphicspgwrapper">
     <div class="hero">
-        <div class="hero-img"></div><!-- <img src="/pics/hero.jpg"> -->
+        <div class="hero-img"><img src="../pics/dark spirls.jpeg" width="100%"></div><!-- <img src="/pics/hero.jpg"> -->
         <p class="hero-text"> "The life of a designer is a life of fight against ugliness.  ~ Massimo Vignelli"</p>
     </div>
 
@@ -52,17 +48,17 @@
     <div class="crd">
         <div class="crd6">
             <div class="crdimg crdimg6">
-                <img src="../../pics/butterflies.jpeg" height="100%" width="100%">
+                <img src="../pics/graphics/Jabberwockyfinalposter.jpg" height="100%" width="100%">
             </div>
             <div class="crdtxt">
-                <h2>title</h2>
-                <p>text about img</p>
+                <h2>Jabberwocky poster</h2>
+                <p>This poster </p>
             </div>
         </div>
     </div>
     <div class="crd3 crd">
         <div class=" crdimg crdimg3">
-            <img src="../../pics/graphics/Jabberwockyfinalposter.jpg" height="100%">
+            <img src="..//pics/graphics/GDES_120_SPRING2023_YOUCANQUOTEME_MADELEINE_LEAHY copy.png" height="100%">
         </div>
         <div class="crdtxt crdtxt3">
             <h2>title</h2>
